# rusty-pee

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
completions/: _rusty-pee  rusty-pee.bash  rusty-pee.fish  rusty-pee.ps1
docs/: COMPATIBILITY.md  DESIGN.md  ci-runtime-baseline.md  feature-layout.md
src/: aggregate.rs  capture.rs  cli.rs  error.rs  fanout.rs  lib.rs  main.rs  mode.rs  spawner.rs  strict.rs
tests/: backpressure.rs  compat_default.rs  compat_strict.rs  completions_drift.rs  fake_pee_child_contract.rs  lib_api.rs
tests/common/: mod.rs
