[package]
name = "rusty-pee"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["James Han <jsh562@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Fan stdin out to N concurrent shell-spawned children — a Rust port of moreutils `pee` with strict-compat mode, exit-code aggregation (Default max / Strict bitwise OR), backpressure-paced byte-perfect delivery, and a typed library API."
repository = "https://github.com/jsh562/rusty-pee"
homepage = "https://github.com/jsh562/rusty-pee"
documentation = "https://docs.rs/rusty-pee"
readme = "README.md"
keywords = ["pee", "moreutils", "tee", "pipe", "cli"]
categories = ["command-line-utilities"]

# -----------------------------------------------------------------------------
# [features] — v0.2.0 portfolio-wide Cargo Features Convention layout.
#
# Convention authority:
#   * specs/adrs/0006-cargo-features-convention-for-portfolio-ports.md (why)
#   * project-instructions.md §Cargo Feature Surface (what)
#
# rusty-pee is a single-capability port per spec 00011 §Scope Edge Cases:
# the documented capability is "fan a single stdin stream out to N concurrent
# shell-spawned children, aggregate their exit codes, and surface failures
# cleanly". Per the minimum-convention rule, ZERO new leaves are carved
# beyond the required umbrellas. See docs/feature-layout.md for the explicit
# carving rationale.
#
# v0.2.0 is a PURELY ADDITIVE release. Every v0.1.x feature name and
# composition is preserved verbatim; the new umbrellas (`full`,
# `pee-classic`, `pee-minimal`) layer on top without renaming or
# narrowing existing features. No SemVer break.
#
# Required umbrellas (FR-001..FR-004):
#   default          — alias for `full`; kitchen-sink for casual `cargo install`
#   full             — every leaf (degenerates to `cli` in this single-cap port)
#   cli              — CLI-only deps + modules (library consumers strip)
#   pee-classic      — bare port, drop-in match for upstream moreutils `pee`
#
# Required preset bundles (FR-007 — 2 per port even for single-cap):
#   pee-classic      — moreutils pee drop-in replacement (aliased above)
#   pee-minimal      — explicit minimal-CLI alias (same composition)
#
# Retained v0.1.x features (additive — names + compositions preserved verbatim):
#   cli              — unchanged: clap + clap_complete + anyhow + signal-hook
#   pee-alias        — unchanged: adds a second `pee` binary entry
#   bench            — unchanged: criterion benches (dev-tooling, allowlist)
#   dev-helpers      — unchanged: gates the `fake-pee-child` test bin
#
# No leaf features carved — see docs/feature-layout.md §Leaves intentionally
# NOT carved for the explicit per-capability rejection rationale.
# -----------------------------------------------------------------------------

[features]
default = ["full"]

# Umbrella: every leaf enabled. Kitchen sink for `cargo install` casual users.
# In rusty-pee (single-capability port) `full` resolves to `cli` alone —
# preserving identical resolution to the v0.1.x `default = ["cli"]` so no
# observable change for any consumer.
full = ["cli"]

# `cli` gates the CLI-only dependencies (clap, clap_complete, anyhow, signal-hook)
# so library consumers can depend on rusty-pee with `default-features = false`
# without pulling in the binary's argument-parsing surface. Composition preserved
# verbatim from v0.1.x.
cli = ["dep:clap", "dep:clap_complete", "dep:anyhow", "dep:signal-hook"]

# Umbrella: bare port, drop-in match for upstream moreutils `pee`. Pulls
# the CLI surface; the bare moreutils `pee` set is reproduced via
# `--strict`, `RUSTY_PEE_STRICT` env var, or `pee-alias` argv[0]
# auto-detect (no extra feature flag required).
pee-classic = ["cli"]

# Preset bundle: explicit minimal-CLI alias. Same composition as
# pee-classic (single-capability port has no smaller subset to carve).
# Provided as a semantic alias mirroring the `<port>-minimal` naming
# convention used by other portfolio ports (figlet-minimal, ts-minimal,
# pwgen-minimal, sponge-minimal, vipe-minimal).
pee-minimal = ["cli"]

# `pee-alias` adds a second binary entry named `pee` alongside `rusty-pee`.
# Both binaries share the same source — they differ only in installed name.
# argv[0] auto-detect (FR-012) routes `pee` invocations into Strict mode.
# v0.1.x feature retained verbatim per the v0.2.0 SemVer additive contract.
# NOT a convention preset bundle — it is an installation-time convenience knob.
pee-alias = ["cli"]

# `bench` enables criterion benches in `benches/`. Off by default to keep
# `cargo install` minimal. Dev-tooling, not a runtime capability —
# outside the convention's purview per the vendored feature-lint allowlist.
# Name + composition preserved verbatim from v0.1.x.
bench = ["dep:criterion"]

# `dev-helpers` gates the `fake-pee-child` `[[bin]]` used by integration tests.
# NOT enabled by `cargo install rusty-pee`, so the fake-pee-child helper never
# ships to end users. Enable with `cargo test --features dev-helpers` (CI does
# this automatically). Dev-tooling outside the convention's purview;
# name + composition preserved verbatim from v0.1.x.
dev-helpers = []

[dependencies]
thiserror = "2"
# CLI-only deps gated behind the `cli` feature.
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
anyhow = { version = "1", optional = true }
# Unix signal handler — declared as optional at top level so the `cli` feature
# can reference it via `dep:signal-hook`. Source code gates usage with #[cfg(unix)].
signal-hook = { version = "0.3", optional = true }
# Bench-only dep gated behind the `bench` feature.
criterion = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
# Used by signal.rs for child-process control + libc::WEXITSTATUS-like helpers.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows console-control handler + TerminateProcess via windows-sys.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
static_assertions = "1"

# Linux-only dev dep for the signal-injection / no-TTY fault-injection tests in
# `tests/signal_cleanup.rs`. Tests are `#[ignore]`'d at v0.1.0 — opt-in via
# `cargo test --features dev-helpers -- --ignored`.
[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"

[[bin]]
name = "rusty-pee"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "pee"
path = "src/bin/pee.rs"
required-features = ["pee-alias"]

[[bin]]
name = "fake-pee-child"
path = "tests/bin/fake_pee_child.rs"
required-features = ["dev-helpers"]
# Don't ship to end users.
test = false
doctest = false
bench = false

[[bench]]
name = "throughput"
harness = false
required-features = ["bench"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
